2007-05-??: 1.9.1

Workaround for ramp/gcc bug (optimization lowered to -O1 for ramp.c)
Several improvements for findpeaks.centWave 
Fixed bug in joinOverlappingPeaks()
Updated ramp.c to v1.38 (from CVS)

2007-04-26: 1.8.0 & 1.9.0

introduced namespace
plot(xcmsEIC) problem seems to be fixed

Added : 
  - rawEIC method
  - findMZBoxes method
  - findPeaks.centWave method
Modified findPeaks() method to support different findPeaks.* algorithms

RAMP: updated ramp.c (v1.37), ramp.h  (from CVS)
  - ...
  - handle mzData "TimeInSeconds" values
  - dealing with mzXML files with missing scans
  - support for zlib compression
  
Check if file exists in xcmsRaw()
Plot (log) colored data points in plotRaw()  

Modified findPeaks method:
  - Moved column "i" (peak number within combined EIC) to the second-to-last column
  - Added column "sn" with signal to noise ratio
xcmsSets now include "i" and "sn" columns in the peaks matrix

Updated Windows NetCDF library to version 3.6.2 (now statically linked into xcms.dll)

Small fixes to xcmsSet generation relating to finding/categorizing files:
  - If the files argument is not set, then "./" is no longer appended
  - One character directory names, and thus group names, are now supported

Enabled axis labels for OpenGL surface plotting using plotSurf()

Removed formerly depricated function clustunique()

Changed xcmsEIC plotting function from an S4 to an S3 method

2006-04-27: 1.6.1 & 1.7.0

Bioconductor release 1.9 and development branch 2.0
Fixed documentation and DESCRIPTION file for R 2.4.0 package check

2006-08-24: 1.5.2

Fixed bug where xcmsSet() failed if less than 2 peaks were detected in a file
Added warning to xcmsSet() if less than 10 peaks were detected in a file

2006-05-09: 1.5.1

Fixed bug where NetCDF files would have their scans incorrectly reversed
Merged recent changes to RAMP mzXML/mzData parser to support TimeInMinutes

2006-04-27: 1.4.0 & 1.5.0

Bioconductor release 1.8 and development branch 1.9